[package]
name = "mail_server"
version = "0.1.0"
authors = ["Federico Baldini"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mail_server"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls", # tells sqlx to use the actix runtime for its futures and rustls as TLS backend
    "macros", # gives the access to sqlx::query! and sqlx::query_as!
    "postgres", # unlocks Postgres-specific functionality (e.g. non-standard SQL types)
    "uuid", # adds support for mapping SQL UUIDs to the Uuid type from the uuid crate
    "chrono", # adds support for mapping SQL timestamptz to the DateTime<T> type from the chrono crate
    "migrate" # gives us access to the same functions used under the hood by sqlx-cli to manage migrations
]